--- a/app/src/main/res/layout/activity_detail_hewan.xml
+++ b/app/src/main/res/layout/activity_detail_hewan.xml
@@ -9,8 +9,8 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="391dp"
-        android:layout_height="444dp"
+        android:layout_width="390dp"
+        android:layout_height="465dp"
         android:layout_marginBottom="289dp"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -209,9 +209,9 @@
             android:id="@+id/button"
             android:layout_width="174dp"
             android:layout_height="50dp"
+            android:background="@android:color/holo_orange_light"
             android:fontFamily="@font/raleway_semibold"
             android:text="Button"
-            android:background="@drawable/wrapper_widget"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
