--- a/app/src/main/res/layout/activity_detail_hewan.xml
+++ b/app/src/main/res/layout/activity_detail_hewan.xml
@@ -18,7 +18,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        tools:srcCompat="@drawable/detail_dog_jpg" />
+        app:srcCompat="@drawable/detail_dog_jpg" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
