--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -91,14 +91,14 @@
 
     <GridView
         android:id="@+id/mygridviewData"
-        android:layout_width="wrap_content"
-        android:layout_height="460dp"
+        android:layout_width="197dp"
+        android:layout_height="568dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="23dp"
-        android:layout_marginTop="121dp"
-        android:layout_marginEnd="25dp"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginEnd="134dp"
         android:horizontalSpacing="6dp"
         android:numColumns="2"
         android:verticalSpacing="6dp"
