--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -49,7 +49,7 @@
         android:layout_height="wrap_content"/>
 
     <GridView
-        android:id="@+id/mygridviewData"
+        android:id="@+id/gridDataFragment"
         android:layout_width="wrap_content"
         android:layout_height="553dp"
         android:layout_alignParentStart="true"
@@ -83,8 +83,4 @@
         android:textColor="@color/black"
         android:textSize="20dp"
         android:textStyle="italic" />
-    <Button
-        android:id="@+id/detail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
 </RelativeLayout>
