--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -57,25 +57,11 @@
         android:textSize="6pt"
         android:textStyle="bold" />
 
-    <EditText
-        android:id="@+id/etPetsId"
-        android:layout_width="wrap_content"
-        android:layout_height="34dp"
-        android:layout_below="@+id/tvPetsId"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="38dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginEnd="37dp"
-        android:background="@drawable/custom_input"
-        android:hint="Enter the Pet's Id"
-        android:paddingStart="10dp" />
-
     <TextView
         android:id="@+id/tvPetsName"
         android:layout_width="191dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/etPetsId"
+        android:layout_below="@+id/imvAddPet"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="38dp"
@@ -275,7 +261,6 @@
         android:layout_below="@+id/tvPetHeight"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
         android:layout_marginStart="38dp"
         android:layout_marginTop="55dp"
         android:layout_marginEnd="37dp"
